--- a/style.css
+++ b/style.css
@@ -524,11 +524,17 @@ video {
 .end-1{
   inset-inline-end: 0.25rem;
 }
+.left-1\/2{
+  left: 50%;
+}
 .isolate{
   isolation: isolate;
 }
 .isolation-auto{
   isolation: auto;
+}
+.-z-\[1\]{
+  z-index: -1;
 }
 .float-right{
   float: right;
@@ -632,14 +638,26 @@ video {
 .hidden{
   display: none;
 }
-.h-\[50vh\]{
-  height: 50vh;
+.h-6{
+  height: 1.5rem;
 }
-.w-40{
-  width: 10rem;
+.h-\[150vh\]{
+  height: 150vh;
+}
+.h-full{
+  height: 100%;
+}
+.w-6{
+  width: 1.5rem;
+}
+.w-\[220px\]{
+  width: 220px;
 }
 .w-full{
   width: 100%;
+}
+.max-w-\[1536px\]{
+  max-width: 1536px;
 }
 .flex-shrink{
   flex-shrink: 1;
@@ -671,6 +689,28 @@ video {
 .border-separate{
   border-collapse: separate;
 }
+.translate-x-\[-40\%\]{
+  --tw-translate-x: -40%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-x-\[-50\%\]{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-\[-100\%\]{
+  --tw-translate-y: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-0{
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-125{
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .\!transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
@@ -685,6 +725,9 @@ video {
 }
 .transform-none{
   transform: none;
+}
+.cursor-pointer{
+  cursor: pointer;
 }
 .touch-auto{
   touch-action: auto;
@@ -1034,15 +1077,19 @@ video {
 .justify-items-stretch{
   justify-items: stretch;
 }
+.gap-x-2{
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+.space-x-12 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(3rem * var(--tw-space-x-reverse));
+  margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-y-reverse > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 1;
@@ -1267,9 +1314,16 @@ video {
 .rounded{
   border-radius: 0.25rem;
 }
+.rounded-full{
+  border-radius: 9999px;
+}
 .rounded-b{
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
+}
+.rounded-b-xl{
+  border-bottom-right-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
 }
 .rounded-e{
   border-start-end-radius: 0.25rem;
@@ -1318,6 +1372,9 @@ video {
 .border{
   border-width: 1px;
 }
+.border-2{
+  border-width: 2px;
+}
 .border-x{
   border-left-width: 1px;
   border-right-width: 1px;
@@ -1362,29 +1419,31 @@ video {
 .border-none{
   border-style: none;
 }
+.border-almostblack{
+  --tw-border-opacity: 1;
+  border-color: rgb(17 17 17 / var(--tw-border-opacity));
+}
+.border-opacity-70{
+  --tw-border-opacity: 0.7;
+}
 .bg-\[rgb\(255\2c 0\2c 0\)\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
-}
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-red-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+.bg-gradient-to-b{
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
-.bg-red-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+.from-forestgreen{
+  --tw-gradient-from: #1B5B31 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(27 91 49 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.bg-almostblack{
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 17 17 / var(--tw-bg-opacity));
+.to-slate-400{
+  --tw-gradient-to: #94a3b8 var(--tw-gradient-to-position);
 }
 .decoration-slice{
   -webkit-box-decoration-break: slice;
@@ -1471,16 +1530,46 @@ video {
   -o-object-fit: scale-down;
      object-fit: scale-down;
 }
+.p-1{
+  padding: 0.25rem;
+}
 .p-2{
   padding: 0.5rem;
 }
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.px-16{
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+.pb-1{
+  padding-bottom: 0.25rem;
 }
 .text-left{
   text-align: left;
@@ -1738,11 +1827,6 @@ video {
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1773,6 +1857,10 @@ video {
 }
 .drop-shadow{
   --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-2xl{
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .grayscale{
@@ -1831,6 +1919,14 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.duration-500{
+  transition-duration: 500ms;
+}
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
@@ -1844,6 +1940,40 @@ video {
   --tw-content: 'this-is-also-valid]-weirdly-enough';
   content: var(--tw-content);
 }
+
+.search.active {
+  background-color: #111111;
+  color: rgb(229 231 235);
+}
+
+.search.active + .search-input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translate(-80%, 100%);
+}
+
+.offer.active {
+  background-color: #111111;
+  color: rgb(229 231 235);
+}
+
+.offer-list {
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out,
+    visibility 0.3s ease-in-out;
+  transform: translate(-50%, 0%);
+  opacity: 0;
+  visibility: hidden;
+  z-index: -1;
+}
+
+.offer.active + .offer-list {
+  transform: translate(-50%, 13%);
+  opacity: 1;
+  visibility: visible;
+  z-index: 0;
+}
+
 @media (min-width: 640px){
   .sm\:container{
     width: 100%;
@@ -1874,35 +2004,56 @@ video {
     }
   }
 }
+
+.hover\:scale-110:hover{
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:bg-almostblack:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 17 17 / var(--tw-bg-opacity));
+}
+
 .hover\:font-bold:hover{
   font-weight: 700;
 }
+
+.hover\:text-gray-200:hover{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
 .hover\:text-gray-300:hover{
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
+
 .before\:hover\:text-center:hover::before{
   content: var(--tw-content);
   text-align: center;
 }
+
 .hover\:before\:text-center:hover::before{
   content: var(--tw-content);
   text-align: center;
 }
+
 .focus\:hover\:text-center:hover:focus{
   text-align: center;
 }
+
 .hover\:focus\:text-center:focus:hover{
   text-align: center;
 }
-.group:hover .group-hover\:block{
-  display: block;
-}
+
 @media (min-width: 640px){
   .sm\:underline{
     text-decoration-line: underline;
   }
 }
+
 @media (prefers-color-scheme: dark){
   @media (min-width: 1024px){
     .dark\:lg\:hover\:\[paint-order\:markers\]:hover{
