--- a/style.css
+++ b/style.css
@@ -638,6 +638,9 @@ video {
 .hidden{
   display: none;
 }
+.h-5{
+  height: 1.25rem;
+}
 .h-6{
   height: 1.5rem;
 }
@@ -646,6 +649,9 @@ video {
 }
 .h-full{
   height: 100%;
+}
+.w-5{
+  width: 1.25rem;
 }
 .w-6{
   width: 1.5rem;
@@ -1076,6 +1082,9 @@ video {
 }
 .justify-items-stretch{
   justify-items: stretch;
+}
+.gap-2{
+  gap: 0.5rem;
 }
 .gap-x-2{
   -moz-column-gap: 0.5rem;
@@ -1972,6 +1981,10 @@ video {
   opacity: 1;
   visibility: visible;
   z-index: 0;
+}
+
+.offer.active > .dropdown-icon {
+  transform: rotate(180deg);
 }
 
 @media (min-width: 640px){
