--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&family=Montserrat:ital,wght@0,400;0,500;1,400;1,500&display=swap');
 /*
 ! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 */
@@ -524,8 +525,17 @@ video {
 .end-1{
   inset-inline-end: 0.25rem;
 }
+.left-0{
+  left: 0px;
+}
 .left-1\/2{
   left: 50%;
+}
+.right-0{
+  right: 0px;
+}
+.top-\[103px\]{
+  top: 103px;
 }
 .isolate{
   isolation: isolate;
@@ -535,6 +545,9 @@ video {
 }
 .-z-\[1\]{
   z-index: -1;
+}
+.z-10{
+  z-index: 10;
 }
 .float-right{
   float: right;
@@ -557,8 +570,42 @@ video {
 .clear-none{
   clear: none;
 }
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+.mb-12{
+  margin-bottom: 3rem;
+}
+.ml-64{
+  margin-left: 16rem;
+}
+.mr-auto{
+  margin-right: auto;
+}
 .mt-2{
   margin-top: 0.5rem;
+}
+.mt-20{
+  margin-top: 5rem;
+}
+.mt-3{
+  margin-top: 0.75rem;
+}
+.mt-5{
+  margin-top: 1.25rem;
+}
+.mt-6{
+  margin-top: 1.5rem;
+}
+.mt-8{
+  margin-top: 2rem;
+}
+.mt-\[823px\]{
+  margin-top: 823px;
+}
+.mt-auto{
+  margin-top: auto;
 }
 .box-border{
   box-sizing: border-box;
@@ -638,23 +685,53 @@ video {
 .hidden{
   display: none;
 }
+.aspect-square{
+  aspect-ratio: 1 / 1;
+}
+.h-12{
+  height: 3rem;
+}
+.h-20{
+  height: 5rem;
+}
 .h-5{
   height: 1.25rem;
 }
 .h-6{
   height: 1.5rem;
 }
-.h-\[150vh\]{
-  height: 150vh;
+.h-7{
+  height: 1.75rem;
+}
+.h-\[720px\]{
+  height: 720px;
 }
 .h-full{
   height: 100%;
 }
+.w-1\/2{
+  width: 50%;
+}
+.w-12{
+  width: 3rem;
+}
+.w-20{
+  width: 5rem;
+}
 .w-5{
   width: 1.25rem;
 }
+.w-56{
+  width: 14rem;
+}
 .w-6{
   width: 1.5rem;
+}
+.w-64{
+  width: 16rem;
+}
+.w-7{
+  width: 1.75rem;
 }
 .w-\[220px\]{
   width: 220px;
@@ -662,8 +739,14 @@ video {
 .w-full{
   width: 100%;
 }
+.max-w-3xl{
+  max-width: 48rem;
+}
 .max-w-\[1536px\]{
   max-width: 1536px;
+}
+.max-w-\[768px\]{
+  max-width: 768px;
 }
 .flex-shrink{
   flex-shrink: 1;
@@ -945,6 +1028,9 @@ video {
 .grid-flow-col-dense{
   grid-auto-flow: column dense;
 }
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .flex-row{
   flex-direction: row;
 }
@@ -1083,8 +1169,15 @@ video {
 .justify-items-stretch{
   justify-items: stretch;
 }
+.gap-16{
+  gap: 4rem;
+}
 .gap-2{
   gap: 0.5rem;
+}
+.gap-x-10{
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
 }
 .gap-x-2{
   -moz-column-gap: 0.5rem;
@@ -1323,6 +1416,9 @@ video {
 .rounded{
   border-radius: 0.25rem;
 }
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
 .rounded-full{
   border-radius: 9999px;
 }
@@ -1353,6 +1449,10 @@ video {
 .rounded-t{
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
+}
+.rounded-t-lg{
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 .rounded-bl{
   border-bottom-left-radius: 0.25rem;
@@ -1395,6 +1495,9 @@ video {
 .border-b{
   border-bottom-width: 1px;
 }
+.border-b-\[1px\]{
+  border-bottom-width: 1px;
+}
 .border-e{
   border-inline-end-width: 1px;
 }
@@ -1432,6 +1535,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(17 17 17 / var(--tw-border-opacity));
 }
+.border-forestgreen{
+  --tw-border-opacity: 1;
+  border-color: rgb(27 91 49 / var(--tw-border-opacity));
+}
 .border-opacity-70{
   --tw-border-opacity: 0.7;
 }
@@ -1439,20 +1546,36 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
+.bg-darkbeige{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 193 171 / var(--tw-bg-opacity));
+}
+.bg-forestgreen{
+  --tw-bg-opacity: 1;
+  background-color: rgb(27 91 49 / var(--tw-bg-opacity));
+}
+.bg-lightbeige{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 240 236 / var(--tw-bg-opacity));
+}
+.bg-transparent{
+  background-color: transparent;
+}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-gradient-to-b{
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+.bg-\[url\(\'\/public\/images\/slider_1\.png\'\)\]{
+  background-image: url('/public/images/slider_1.png');
 }
-.from-forestgreen{
-  --tw-gradient-from: #1B5B31 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(27 91 49 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.bg-\[url\(\'\/public\/images\/slider_2\.jpg\'\)\]{
+  background-image: url('/public/images/slider_2.jpg');
 }
-.to-slate-400{
-  --tw-gradient-to: #94a3b8 var(--tw-gradient-to-position);
+.bg-\[url\(\'\/public\/images\/slider_3\.jpg\'\)\]{
+  background-image: url('/public/images/slider_3.jpg');
+}
+.bg-\[url\(\'\/public\/images\/third_section_garden\.png\'\)\]{
+  background-image: url('/public/images/third_section_garden.png');
 }
 .decoration-slice{
   -webkit-box-decoration-break: slice;
@@ -1469,6 +1592,9 @@ video {
 .box-decoration-clone{
   -webkit-box-decoration-break: clone;
           box-decoration-break: clone;
+}
+.bg-cover{
+  background-size: cover;
 }
 .bg-fixed{
   background-attachment: fixed;
@@ -1542,12 +1668,22 @@ video {
 .p-1{
   padding: 0.25rem;
 }
+.p-10{
+  padding: 2.5rem;
+}
+.p-12{
+  padding: 3rem;
+}
 .p-2{
   padding: 0.5rem;
 }
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
+}
+.px-24{
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
 .px-3{
   padding-left: 0.75rem;
@@ -1565,9 +1701,21 @@ video {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 .py-3{
   padding-top: 0.75rem;
@@ -1579,6 +1727,30 @@ video {
 }
 .pb-1{
   padding-bottom: 0.25rem;
+}
+.pb-32{
+  padding-bottom: 8rem;
+}
+.pl-20{
+  padding-left: 5rem;
+}
+.pr-12{
+  padding-right: 3rem;
+}
+.pr-32{
+  padding-right: 8rem;
+}
+.pr-36{
+  padding-right: 9rem;
+}
+.pr-8{
+  padding-right: 2rem;
+}
+.pt-28{
+  padding-top: 7rem;
+}
+.pr-1{
+  padding-right: 0.25rem;
 }
 .text-left{
   text-align: left;
@@ -1625,8 +1797,37 @@ video {
 .font-inter{
   font-family: Inter, sans-serif;
 }
+.font-monts{
+  font-family: Montserrat, sans-serif;
+}
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+.text-\[17px\]{
+  font-size: 17px;
+}
+.text-\[60px\]{
+  font-size: 60px;
+}
+.text-\[64px\]{
+  font-size: 64px;
+}
 .font-bold{
   font-weight: 700;
+}
+.font-light{
+  font-weight: 300;
+}
+.font-medium{
+  font-weight: 500;
+}
+.font-extralight{
+  font-weight: 200;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1681,6 +1882,12 @@ video {
   --tw-numeric-fraction: stacked-fractions;
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
+.leading-\[115\%\]{
+  line-height: 115%;
+}
+.leading-\[165\%\]{
+  line-height: 165%;
+}
 .text-\[\#336699\]\/\[\.35\]{
   color: rgb(51 102 153 / .35);
 }
@@ -1691,6 +1898,14 @@ video {
 .text-blue-500{
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+.text-forestgreen{
+  --tw-text-opacity: 1;
+  color: rgb(27 91 49 / var(--tw-text-opacity));
+}
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
@@ -1872,6 +2087,14 @@ video {
   --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
+.drop-shadow-md{
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-sm{
+  --tw-drop-shadow: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .grayscale{
   --tw-grayscale: grayscale(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1987,6 +2210,26 @@ video {
   transform: rotate(180deg);
 }
 
+.drop-north-shadow {
+  --tw-drop-shadow: drop-shadow(0 -20px 13px rgb(0 0 0 / 0.03))
+    drop-shadow(0 -8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.slide-in {
+  transform: translateX(0%);
+}
+
+.slide-right {
+  transform: translateX(100%);
+}
+
+.slide-left {
+  transform: translateX(-100%);
+}
+
 @media (min-width: 640px){
   .sm\:container{
     width: 100%;
@@ -2018,6 +2261,26 @@ video {
   }
 }
 
+.hover\:-translate-y-1:hover{
+  --tw-translate-y: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:translate-x-3:hover{
+  --tw-translate-x: 0.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:translate-x-2:hover{
+  --tw-translate-x: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:rotate-3:hover{
+  --tw-rotate: 3deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:scale-110:hover{
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -2027,6 +2290,41 @@ video {
 .hover\:bg-almostblack:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(17 17 17 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-forestgreen:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(27 91 49 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-opacity-30:hover{
+  --tw-bg-opacity: 0.3;
+}
+
+.hover\:bg-gradient-to-t:hover{
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.hover\:from-forestgreen:hover{
+  --tw-gradient-from: #1B5B31 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(27 91 49 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.hover\:to-green-800:hover{
+  --tw-gradient-to: #166534 var(--tw-gradient-to-position);
+}
+
+.hover\:pl-2:hover{
+  padding-left: 0.5rem;
+}
+
+.hover\:pl-1:hover{
+  padding-left: 0.25rem;
+}
+
+.hover\:pr-0:hover{
+  padding-right: 0px;
 }
 
 .hover\:font-bold:hover{
@@ -2041,6 +2339,21 @@ video {
 .hover\:text-gray-300:hover{
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-pink-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(219 39 119 / var(--tw-text-opacity));
+}
+
+.hover\:drop-shadow-xl:hover{
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .before\:hover\:text-center:hover::before{
@@ -2059,6 +2372,31 @@ video {
 
 .hover\:focus\:text-center:focus:hover{
   text-align: center;
+}
+
+.group:hover .group-hover\:translate-x-2{
+  --tw-translate-x: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:translate-x-1{
+  --tw-translate-x: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes bounce{
+  0%, 100%{
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+  50%{
+    transform: none;
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+
+.group:hover .group-hover\:animate-bounce{
+  animation: bounce 1s infinite;
 }
 
 @media (min-width: 640px){
