--- a/style.css
+++ b/style.css
@@ -607,6 +607,15 @@ video {
 .mt-auto{
   margin-top: auto;
 }
+.mt-10{
+  margin-top: 2.5rem;
+}
+.mt-12{
+  margin-top: 3rem;
+}
+.mt-16{
+  margin-top: 4rem;
+}
 .box-border{
   box-sizing: border-box;
 }
@@ -738,6 +747,9 @@ video {
 }
 .w-full{
   width: 100%;
+}
+.w-60{
+  width: 15rem;
 }
 .max-w-3xl{
   max-width: 48rem;
@@ -1539,6 +1551,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(27 91 49 / var(--tw-border-opacity));
 }
+.border-lightbeige{
+  --tw-border-opacity: 1;
+  border-color: rgb(245 240 236 / var(--tw-border-opacity));
+}
 .border-opacity-70{
   --tw-border-opacity: 0.7;
 }
@@ -1668,9 +1684,6 @@ video {
 .p-1{
   padding: 0.25rem;
 }
-.p-10{
-  padding: 2.5rem;
-}
 .p-12{
   padding: 3rem;
 }
@@ -1734,6 +1747,9 @@ video {
 .pl-20{
   padding-left: 5rem;
 }
+.pr-1{
+  padding-right: 0.25rem;
+}
 .pr-12{
   padding-right: 3rem;
 }
@@ -1749,8 +1765,23 @@ video {
 .pt-28{
   padding-top: 7rem;
 }
-.pr-1{
-  padding-right: 0.25rem;
+.pb-24{
+  padding-bottom: 6rem;
+}
+.pl-32{
+  padding-left: 8rem;
+}
+.pr-20{
+  padding-right: 5rem;
+}
+.pt-24{
+  padding-top: 6rem;
+}
+.pl-52{
+  padding-left: 13rem;
+}
+.pl-40{
+  padding-left: 10rem;
 }
 .text-left{
   text-align: left;
@@ -1826,9 +1857,6 @@ video {
 .font-medium{
   font-weight: 500;
 }
-.font-extralight{
-  font-weight: 200;
-}
 .uppercase{
   text-transform: uppercase;
 }
@@ -1888,6 +1916,12 @@ video {
 .leading-\[165\%\]{
   line-height: 165%;
 }
+.leading-\[110\%\]{
+  line-height: 110%;
+}
+.leading-\[120\%\]{
+  line-height: 120%;
+}
 .text-\[\#336699\]\/\[\.35\]{
   color: rgb(51 102 153 / .35);
 }
@@ -1906,6 +1940,10 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-lightbeige{
+  --tw-text-opacity: 1;
+  color: rgb(245 240 236 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
@@ -2266,16 +2304,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:translate-x-3:hover{
-  --tw-translate-x: 0.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:translate-x-2:hover{
-  --tw-translate-x: 0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:rotate-3:hover{
   --tw-rotate: 3deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2297,8 +2325,26 @@ video {
   background-color: rgb(27 91 49 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-lightbeige:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 240 236 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-opacity-30:hover{
   --tw-bg-opacity: 0.3;
+}
+
+.hover\:bg-opacity-10:hover{
+  --tw-bg-opacity: 0.1;
+}
+
+.hover\:bg-opacity-20:hover{
+  --tw-bg-opacity: 0.2;
 }
 
 .hover\:bg-gradient-to-t:hover{
@@ -2315,16 +2361,28 @@ video {
   --tw-gradient-to: #166534 var(--tw-gradient-to-position);
 }
 
-.hover\:pl-2:hover{
-  padding-left: 0.5rem;
-}
-
 .hover\:pl-1:hover{
   padding-left: 0.25rem;
 }
 
 .hover\:pr-0:hover{
   padding-right: 0px;
+}
+
+.hover\:pl-4:hover{
+  padding-left: 1rem;
+}
+
+.hover\:pr-2:hover{
+  padding-right: 0.5rem;
+}
+
+.hover\:pl-5:hover{
+  padding-left: 1.25rem;
+}
+
+.hover\:pr-1:hover{
+  padding-right: 0.25rem;
 }
 
 .hover\:font-bold:hover{
@@ -2346,13 +2404,13 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:text-pink-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(219 39 119 / var(--tw-text-opacity));
-}
-
 .hover\:drop-shadow-xl:hover{
   --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.hover\:drop-shadow-2xl:hover{
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -2372,11 +2430,6 @@ video {
 
 .hover\:focus\:text-center:focus:hover{
   text-align: center;
-}
-
-.group:hover .group-hover\:translate-x-2{
-  --tw-translate-x: 0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .group:hover .group-hover\:translate-x-1{
