--- a/style.css
+++ b/style.css
@@ -1276,6 +1276,9 @@ video {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
 }
+.gap-y-5{
+  row-gap: 1.25rem;
+}
 .space-x-12 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(3rem * var(--tw-space-x-reverse));
@@ -1574,6 +1577,9 @@ video {
 .rounded-tr{
   border-top-right-radius: 0.25rem;
 }
+.rounded-tl-lg{
+  border-top-left-radius: 0.5rem;
+}
 .border{
   border-width: 1px;
 }
@@ -1671,6 +1677,15 @@ video {
 }
 .bg-opacity-70{
   --tw-bg-opacity: 0.7;
+}
+.bg-opacity-75{
+  --tw-bg-opacity: 0.75;
+}
+.bg-opacity-90{
+  --tw-bg-opacity: 0.9;
+}
+.bg-opacity-\[0\.85\]{
+  --tw-bg-opacity: 0.85;
 }
 .bg-\[url\(\'\/public\/images\/slider_1\.png\'\)\]{
   background-image: url('/public/images/slider_1.png');
@@ -1855,6 +1870,14 @@ video {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.px-20{
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
 .pb-1{
   padding-bottom: 0.25rem;
 }
@@ -1896,6 +1919,21 @@ video {
 }
 .pt-28{
   padding-top: 7rem;
+}
+.pr-28{
+  padding-right: 7rem;
+}
+.pr-20{
+  padding-right: 5rem;
+}
+.pb-24{
+  padding-bottom: 6rem;
+}
+.pb-20{
+  padding-bottom: 5rem;
+}
+.pt-16{
+  padding-top: 4rem;
 }
 .text-left{
   text-align: left;
@@ -2606,8 +2644,99 @@ video {
 }
 
 @media (min-width: 640px){
+  .sm\:block{
+    display: block;
+  }
+  .sm\:w-48{
+    width: 12rem;
+  }
+  .sm\:w-52{
+    width: 13rem;
+  }
+  .sm\:w-auto{
+    width: auto;
+  }
+  .sm\:w-full{
+    width: 100%;
+  }
+  .sm\:w-1\/2{
+    width: 50%;
+  }
+  .sm\:max-w-\[768px\]{
+    max-width: 768px;
+  }
+  .sm\:bg-darkbeige{
+    --tw-bg-opacity: 1;
+    background-color: rgb(220 193 171 / var(--tw-bg-opacity));
+  }
+  .sm\:bg-transparent{
+    background-color: transparent;
+  }
+  .sm\:bg-none{
+    background-image: none;
+  }
+  .sm\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .sm\:py-1{
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+  .sm\:py-2{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  .sm\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+  .sm\:py-16{
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+  .sm\:pb-16{
+    padding-bottom: 4rem;
+  }
+  .sm\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
   .sm\:underline{
     text-decoration-line: underline;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:py-24{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+  .md\:px-20{
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+  .md\:pr-36{
+    padding-right: 9rem;
+  }
+  .md\:text-left{
+    text-align: left;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:block{
+    display: block;
+  }
+  .lg\:w-64{
+    width: 16rem;
+  }
+  .lg\:pr-36{
+    padding-right: 9rem;
+  }
+  .lg\:hover\:rotate-3:hover{
+    --tw-rotate: 3deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 }
 
@@ -2616,5 +2745,49 @@ video {
     .dark\:lg\:hover\:\[paint-order\:markers\]:hover{
       paint-order: markers;
     }
+  }
+}
+
+@media (min-width: 1280px){
+  .xl\:pr-36{
+    padding-right: 9rem;
+  }
+  .xl\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+  .xl\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  .xl\:text-\[17px\]{
+    font-size: 17px;
+  }
+}
+
+@media (min-width: 1536px){
+  .\32xl\:w-64{
+    width: 16rem;
+  }
+  .\32xl\:w-auto{
+    width: auto;
+  }
+  .\32xl\:flex-row{
+    flex-direction: row;
+  }
+  .\32xl\:gap-x-10{
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
+  }
+  .\32xl\:rounded-t-lg{
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+  }
+  .\32xl\:pr-12{
+    padding-right: 3rem;
+  }
+  .\32xl\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
