--- a/style.css
+++ b/style.css
@@ -537,8 +537,14 @@ video {
 .right-0{
   right: 0px;
 }
-.top-\[103px\]{
-  top: 103px;
+.start-1{
+  inset-inline-start: 0.25rem;
+}
+.top-\[81px\]{
+  top: 81px;
+}
+.top-\[99px\]{
+  top: 99px;
 }
 .isolate{
   isolation: isolate;
@@ -551,6 +557,21 @@ video {
 }
 .z-10{
   z-index: 10;
+}
+.z-\[1\]{
+  z-index: 1;
+}
+.order-1{
+  order: 1;
+}
+.order-2{
+  order: 2;
+}
+.order-3{
+  order: 3;
+}
+.order-last{
+  order: 9999;
 }
 .float-right{
   float: right;
@@ -573,6 +594,9 @@ video {
 .clear-none{
   clear: none;
 }
+.m-1{
+  margin: 0.25rem;
+}
 .mx-10{
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -589,6 +613,9 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
+.mb-1{
+  margin-bottom: 0.25rem;
+}
 .mb-12{
   margin-bottom: 3rem;
 }
@@ -600,6 +627,9 @@ video {
 }
 .ml-1{
   margin-left: 0.25rem;
+}
+.ml-2{
+  margin-left: 0.5rem;
 }
 .ml-64{
   margin-left: 16rem;
@@ -646,8 +676,8 @@ video {
 .mt-\[72px\]{
   margin-top: 72px;
 }
-.mt-\[823px\]{
-  margin-top: 823px;
+.mt-\[801px\]{
+  margin-top: 801px;
 }
 .mt-auto{
   margin-top: auto;
@@ -733,26 +763,35 @@ video {
 .aspect-square{
   aspect-ratio: 1 / 1;
 }
+.h-1{
+  height: 0.25rem;
+}
 .h-10{
   height: 2.5rem;
 }
 .h-12{
   height: 3rem;
 }
+.h-2{
+  height: 0.5rem;
+}
 .h-20{
   height: 5rem;
 }
+.h-4{
+  height: 1rem;
+}
 .h-40{
   height: 10rem;
-}
-.h-5{
-  height: 1.25rem;
 }
 .h-6{
   height: 1.5rem;
 }
 .h-7{
   height: 1.75rem;
+}
+.h-8{
+  height: 2rem;
 }
 .h-\[400px\]{
   height: 400px;
@@ -787,8 +826,8 @@ video {
 .w-20{
   width: 5rem;
 }
-.w-5{
-  width: 1.25rem;
+.w-4{
+  width: 1rem;
 }
 .w-56{
   width: 14rem;
@@ -802,6 +841,9 @@ video {
 .w-7{
   width: 1.75rem;
 }
+.w-8{
+  width: 2rem;
+}
 .w-\[170px\]{
   width: 170px;
 }
@@ -813,6 +855,9 @@ video {
 }
 .max-w-3xl{
   max-width: 48rem;
+}
+.max-w-\[100vw\]{
+  max-width: 100vw;
 }
 .max-w-\[1536px\]{
   max-width: 1536px;
@@ -850,8 +895,8 @@ video {
 .border-separate{
   border-collapse: separate;
 }
-.translate-x-\[-40\%\]{
-  --tw-translate-x: -40%;
+.translate-x-\[-100\%\]{
+  --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .translate-x-\[-50\%\]{
@@ -860,6 +905,10 @@ video {
 }
 .translate-y-\[-100\%\]{
   --tw-translate-y: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-\[100\%\]{
+  --tw-translate-y: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-180{
@@ -871,9 +920,9 @@ video {
   --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.scale-125{
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
+.scale-110{
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .\!transform{
@@ -1257,8 +1306,9 @@ video {
 .gap-16{
   gap: 4rem;
 }
-.gap-2{
-  gap: 0.5rem;
+.gap-x-1{
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
 }
 .gap-x-10{
   -moz-column-gap: 2.5rem;
@@ -1276,18 +1326,21 @@ video {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
 }
+.gap-y-4{
+  row-gap: 1rem;
+}
 .gap-y-5{
   row-gap: 1.25rem;
-}
-.space-x-12 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(3rem * var(--tw-space-x-reverse));
-  margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .space-y-reverse > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 1;
@@ -1549,10 +1602,6 @@ video {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
 }
-.rounded-t-lg{
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
-}
 .rounded-bl{
   border-bottom-left-radius: 0.25rem;
 }
@@ -1574,11 +1623,11 @@ video {
 .rounded-tl{
   border-top-left-radius: 0.25rem;
 }
-.rounded-tr{
-  border-top-right-radius: 0.25rem;
-}
 .rounded-tl-lg{
   border-top-left-radius: 0.5rem;
+}
+.rounded-tr{
+  border-top-right-radius: 0.25rem;
 }
 .border{
   border-width: 1px;
@@ -1677,12 +1726,6 @@ video {
 }
 .bg-opacity-70{
   --tw-bg-opacity: 0.7;
-}
-.bg-opacity-75{
-  --tw-bg-opacity: 0.75;
-}
-.bg-opacity-90{
-  --tw-bg-opacity: 0.9;
 }
 .bg-opacity-\[0\.85\]{
   --tw-bg-opacity: 0.85;
@@ -1810,9 +1853,9 @@ video {
 .p-5{
   padding: 1.25rem;
 }
-.px-16{
-  padding-left: 4rem;
-  padding-right: 4rem;
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 .px-24{
   padding-left: 6rem;
@@ -1854,10 +1897,6 @@ video {
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
-.py-24{
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1865,18 +1904,6 @@ video {
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-.px-20{
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-.px-12{
-  padding-left: 3rem;
-  padding-right: 3rem;
 }
 .pb-1{
   padding-bottom: 0.25rem;
@@ -1886,6 +1913,9 @@ video {
 }
 .pb-16{
   padding-bottom: 4rem;
+}
+.pb-24{
+  padding-bottom: 6rem;
 }
 .pb-32{
   padding-bottom: 8rem;
@@ -1917,23 +1947,20 @@ video {
 .pr-8{
   padding-right: 2rem;
 }
+.pt-16{
+  padding-top: 4rem;
+}
 .pt-28{
   padding-top: 7rem;
 }
-.pr-28{
-  padding-right: 7rem;
+.pt-4{
+  padding-top: 1rem;
 }
-.pr-20{
-  padding-right: 5rem;
+.pb-6{
+  padding-bottom: 1.5rem;
 }
-.pb-24{
-  padding-bottom: 6rem;
-}
-.pb-20{
-  padding-bottom: 5rem;
-}
-.pt-16{
-  padding-top: 4rem;
+.pt-3{
+  padding-top: 0.75rem;
 }
 .text-left{
   text-align: left;
@@ -1998,15 +2025,17 @@ video {
 .text-\[17px\]{
   font-size: 17px;
 }
-.text-\[60px\]{
-  font-size: 60px;
-}
-.text-\[64px\]{
-  font-size: 64px;
-}
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .font-bold{
   font-weight: 700;
@@ -2081,6 +2110,9 @@ video {
 }
 .leading-\[165\%\]{
   line-height: 165%;
+}
+.leading-none{
+  line-height: 1;
 }
 .text-\[\#336699\]\/\[\.35\]{
   color: rgb(51 102 153 / .35);
@@ -2363,11 +2395,20 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.delay-500{
+  transition-delay: 500ms;
+}
+.delay-\[2000ms\]{
+  transition-delay: 2000ms;
+}
 .duration-1000{
   transition-duration: 1000ms;
 }
 .duration-500{
   transition-duration: 500ms;
+}
+.duration-\[2000ms\]{
+  transition-duration: 2000ms;
 }
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
@@ -2382,17 +2423,13 @@ video {
   --tw-content: 'this-is-also-valid]-weirdly-enough';
   content: var(--tw-content);
 }
+.\[a-zA-Z0-9\:\\\\-\\\\\._\$\]{
+  a-z-a--z0-9: \\-\\. $;
+}
 
 .search.active {
   background-color: #111111;
   color: rgb(229 231 235);
-}
-
-.search.active + .search-input {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transform: translate(-80%, 100%);
 }
 
 .offer.active {
@@ -2409,16 +2446,29 @@ video {
   z-index: -1;
 }
 
-.offer.active + .offer-list {
-  transform: translate(-50%, 13%);
+.offer.active + .offer-list{
+  transform: translate(-50%, 0%);
   opacity: 1;
   visibility: visible;
   z-index: 0;
 }
 
+@media(min-width:640px){
+  .offer.active + .offer-list {
+    transform: translate(-50%, 10%);
+  }
+}
+
+@media(min-width:768px){
+  .offer.active + .offer-list {
+    transform: translate(-50%, 13%);
+}
+
+}
 .offer.active > .dropdown-icon {
   transform: rotate(180deg);
 }
+
 
 .drop-north-shadow {
   --tw-drop-shadow: drop-shadow(0 -20px 13px rgb(0 0 0 / 0.03))
@@ -2596,6 +2646,10 @@ video {
   padding-right: 0px;
 }
 
+.hover\:pr-1:hover{
+  padding-right: 0.25rem;
+}
+
 .hover\:font-bold:hover{
   font-weight: 700;
 }
@@ -2644,26 +2698,58 @@ video {
 }
 
 @media (min-width: 640px){
+  .sm\:order-1{
+    order: 1;
+  }
+  .sm\:order-2{
+    order: 2;
+  }
+  .sm\:order-3{
+    order: 3;
+  }
+  .sm\:mb-0{
+    margin-bottom: 0px;
+  }
   .sm\:block{
     display: block;
   }
-  .sm\:w-48{
-    width: 12rem;
+  .sm\:flex{
+    display: flex;
   }
-  .sm\:w-52{
-    width: 13rem;
+  .sm\:hidden{
+    display: none;
   }
-  .sm\:w-auto{
-    width: auto;
-  }
-  .sm\:w-full{
-    width: 100%;
+  .sm\:h-5{
+    height: 1.25rem;
   }
   .sm\:w-1\/2{
     width: 50%;
   }
-  .sm\:max-w-\[768px\]{
-    max-width: 768px;
+  .sm\:w-5{
+    width: 1.25rem;
+  }
+  .sm\:w-auto{
+    width: auto;
+  }
+  .sm\:translate-x-\[-95\%\]{
+    --tw-translate-x: -95%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .sm\:translate-y-\[70\%\]{
+    --tw-translate-y: 70%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .sm\:flex-row{
+    flex-direction: row;
+  }
+  .sm\:gap-x-2{
+    -moz-column-gap: 0.5rem;
+         column-gap: 0.5rem;
+  }
+  .sm\:space-x-4 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
   .sm\:bg-darkbeige{
     --tw-bg-opacity: 1;
@@ -2679,28 +2765,16 @@ video {
     padding-left: 1rem;
     padding-right: 1rem;
   }
-  .sm\:py-1{
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-  }
   .sm\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
-  .sm\:py-3{
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-  }
-  .sm\:py-16{
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+  .sm\:py-5{
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
   .sm\:pb-16{
     padding-bottom: 4rem;
-  }
-  .sm\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
   .sm\:underline{
     text-decoration-line: underline;
@@ -2708,16 +2782,31 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:py-24{
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+  .md\:top-\[95px\]{
+    top: 95px;
+  }
+  .md\:mt-\[815px\]{
+    margin-top: 815px;
+  }
+  .md\:translate-x-\[-90\%\]{
+    --tw-translate-x: -90%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
   .md\:px-20{
     padding-left: 5rem;
     padding-right: 5rem;
   }
-  .md\:pr-36{
-    padding-right: 9rem;
+  .md\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  .md\:py-2{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  .md\:py-24{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
   .md\:text-left{
     text-align: left;
@@ -2725,11 +2814,47 @@ video {
 }
 
 @media (min-width: 1024px){
+  .lg\:top-\[99px\]{
+    top: 99px;
+  }
+  .lg\:mt-\[819px\]{
+    margin-top: 819px;
+  }
   .lg\:block{
     display: block;
   }
   .lg\:w-64{
     width: 16rem;
+  }
+  .lg\:translate-x-\[-80\%\]{
+    --tw-translate-x: -80%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .lg\:translate-y-\[100\%\]{
+    --tw-translate-y: 100%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .lg\:scale-125{
+    --tw-scale-x: 1.25;
+    --tw-scale-y: 1.25;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .lg\:space-x-12 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(3rem * var(--tw-space-x-reverse));
+    margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+  .lg\:px-16{
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+  .lg\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  .lg\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
   .lg\:pr-36{
     padding-right: 9rem;
@@ -2749,16 +2874,9 @@ video {
 }
 
 @media (min-width: 1280px){
-  .xl\:pr-36{
-    padding-right: 9rem;
-  }
   .xl\:text-5xl{
     font-size: 3rem;
     line-height: 1;
-  }
-  .xl\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
   .xl\:text-\[17px\]{
     font-size: 17px;
@@ -2766,9 +2884,6 @@ video {
 }
 
 @media (min-width: 1536px){
-  .\32xl\:w-64{
-    width: 16rem;
-  }
   .\32xl\:w-auto{
     width: auto;
   }
