add responsive slides

--- a/style.css
+++ b/style.css
@@ -540,11 +540,8 @@ video {
 .start-1{
   inset-inline-start: 0.25rem;
 }
-.top-\[81px\]{
-  top: 81px;
-}
-.top-\[99px\]{
-  top: 99px;
+.top-\[88px\]{
+  top: 88px;
 }
 .isolate{
   isolation: isolate;
@@ -616,11 +613,17 @@ video {
 .mb-1{
   margin-bottom: 0.25rem;
 }
+.mb-10{
+  margin-bottom: 2.5rem;
+}
 .mb-12{
   margin-bottom: 3rem;
 }
 .mb-24{
   margin-bottom: 6rem;
+}
+.mb-4{
+  margin-bottom: 1rem;
 }
 .mb-\[840px\]{
   margin-bottom: 840px;
@@ -673,11 +676,11 @@ video {
 .mt-\[-840px\]{
   margin-top: -840px;
 }
+.mt-\[648px\]{
+  margin-top: 648px;
+}
 .mt-\[72px\]{
   margin-top: 72px;
-}
-.mt-\[801px\]{
-  margin-top: 801px;
 }
 .mt-auto{
   margin-top: auto;
@@ -1914,9 +1917,6 @@ video {
 .pb-16{
   padding-bottom: 4rem;
 }
-.pb-24{
-  padding-bottom: 6rem;
-}
 .pb-32{
   padding-bottom: 8rem;
 }
@@ -1944,23 +1944,11 @@ video {
 .pr-4{
   padding-right: 1rem;
 }
-.pr-8{
-  padding-right: 2rem;
-}
-.pt-16{
-  padding-top: 4rem;
+.pt-0{
+  padding-top: 0px;
 }
 .pt-28{
   padding-top: 7rem;
-}
-.pt-4{
-  padding-top: 1rem;
-}
-.pb-6{
-  padding-bottom: 1.5rem;
-}
-.pt-3{
-  padding-top: 0.75rem;
 }
 .text-left{
   text-align: left;
@@ -2010,6 +1998,10 @@ video {
 .font-monts{
   font-family: Montserrat, sans-serif;
 }
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -2025,16 +2017,16 @@ video {
 .text-\[17px\]{
   font-size: 17px;
 }
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 .text-xl{
   font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-lg{
-  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 .font-bold{
@@ -2698,6 +2690,9 @@ video {
 }
 
 @media (min-width: 640px){
+  .sm\:top-\[80px\]{
+    top: 80px;
+  }
   .sm\:order-1{
     order: 1;
   }
@@ -2710,8 +2705,14 @@ video {
   .sm\:mb-0{
     margin-bottom: 0px;
   }
+  .sm\:mb-12{
+    margin-bottom: 3rem;
+  }
   .sm\:block{
     display: block;
+  }
+  .sm\:inline{
+    display: inline;
   }
   .sm\:flex{
     display: flex;
@@ -2721,6 +2722,9 @@ video {
   }
   .sm\:h-5{
     height: 1.25rem;
+  }
+  .sm\:h-\[720px\]{
+    height: 720px;
   }
   .sm\:w-1\/2{
     width: 50%;
@@ -2773,8 +2777,12 @@ video {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
   }
-  .sm\:pb-16{
-    padding-bottom: 4rem;
+  .sm\:pt-16{
+    padding-top: 4rem;
+  }
+  .sm\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
   .sm\:underline{
     text-decoration-line: underline;
@@ -2788,9 +2796,15 @@ video {
   .md\:mt-\[815px\]{
     margin-top: 815px;
   }
+  .md\:hidden{
+    display: none;
+  }
   .md\:translate-x-\[-90\%\]{
     --tw-translate-x: -90%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .md\:items-start{
+    align-items: flex-start;
   }
   .md\:px-20{
     padding-left: 5rem;
@@ -2822,6 +2836,9 @@ video {
   }
   .lg\:block{
     display: block;
+  }
+  .lg\:inline{
+    display: inline;
   }
   .lg\:w-64{
     width: 16rem;
@@ -2858,6 +2875,15 @@ video {
   }
   .lg\:pr-36{
     padding-right: 9rem;
+  }
+  .lg\:pr-28{
+    padding-right: 7rem;
+  }
+  .lg\:pr-0{
+    padding-right: 0px;
+  }
+  .lg\:pr-16{
+    padding-right: 4rem;
   }
   .lg\:hover\:rotate-3:hover{
     --tw-rotate: 3deg;
