add responsive about section

--- a/style.css
+++ b/style.css
@@ -1718,6 +1718,9 @@ video {
 .bg-opacity-\[0\.85\]{
   --tw-bg-opacity: 0.85;
 }
+.bg-opacity-\[0\.9\]{
+  --tw-bg-opacity: 0.9;
+}
 .bg-\[url\(\'\/public\/images\/slider_1\.png\'\)\]{
   background-image: url('/public/images/slider_1.png');
 }
@@ -1732,6 +1735,9 @@ video {
 }
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+.bg-\[url\(\'public\/images\/third_section_garden\.png\'\)\]{
+  background-image: url('public/images/third_section_garden.png');
 }
 .from-transparent{
   --tw-gradient-from: transparent var(--tw-gradient-from-position);
@@ -1889,6 +1895,10 @@ video {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+.px-16{
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
 .pb-1{
   padding-bottom: 0.25rem;
 }
@@ -1924,6 +1934,9 @@ video {
 }
 .pt-16{
   padding-top: 4rem;
+}
+.pb-20{
+  padding-bottom: 5rem;
 }
 .text-left{
   text-align: left;
@@ -1996,6 +2009,10 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .font-bold{
   font-weight: 700;
@@ -2748,6 +2765,10 @@ video {
   .sm\:bg-transparent{
     background-color: transparent;
   }
+  .sm\:bg-forestgreen{
+    --tw-bg-opacity: 1;
+    background-color: rgb(27 91 49 / var(--tw-bg-opacity));
+  }
   .sm\:bg-none{
     background-image: none;
   }
@@ -2792,6 +2813,12 @@ video {
   .md\:mt-\[815px\]{
     margin-top: 815px;
   }
+  .md\:mt-10{
+    margin-top: 2.5rem;
+  }
+  .md\:inline{
+    display: inline;
+  }
   .md\:h-20{
     height: 5rem;
   }
@@ -2834,8 +2861,15 @@ video {
     padding-top: 6rem;
     padding-bottom: 6rem;
   }
+  .md\:px-16{
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
   .md\:pt-28{
     padding-top: 7rem;
+  }
+  .md\:pb-32{
+    padding-bottom: 8rem;
   }
   .md\:text-left{
     text-align: left;
@@ -2858,6 +2892,9 @@ video {
   }
   .lg\:mt-20{
     margin-top: 5rem;
+  }
+  .lg\:mt-16{
+    margin-top: 4rem;
   }
   .lg\:block{
     display: block;
@@ -2913,6 +2950,14 @@ video {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
   }
+  .lg\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+  .lg\:px-24{
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
   .lg\:pr-16{
     padding-right: 4rem;
   }
@@ -2963,6 +3008,12 @@ video {
   .xl\:px-16{
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+  .xl\:pl-40{
+    padding-left: 10rem;
+  }
+  .xl\:pr-32{
+    padding-right: 8rem;
   }
   .xl\:text-5xl{
     font-size: 3rem;
